--- a/INCONTRI/A.A.2019-2020/.gitignore
+++ b/INCONTRI/A.A.2019-2020/.gitignore
@@ -1,1 +1,5 @@
-ac-nicb*.odt
+#
+# we don't want to save the original (== editable) autocertifications,
+# but only the pdfs stemming from them
+#
+*.odt
